--- a/templates/landing/hashtag.html
+++ b/templates/landing/hashtag.html
@@ -52,6 +52,17 @@
         <div id="map" style="width:100%;height:350px"></div>
       </div>
     </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="text-center" style="margin-top: 20px;">
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'hashtag:index' %}" class="btn btn-primary">{% trans "Create my banner" %}</a>
+                {% else %}
+                    <a href="/accounts/login/" class="btn btn-primary">{% trans "Login/Signup to be here" %}</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 </section>
 <div id="imgModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
