--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -71,7 +71,11 @@
 						<li><a {% if request.path != '/' %}class="external"{% endif %} href="{% url 'landing:index' %}#contact">Contact</a></li>
 						<li><a class="external" href="{% url 'landing:hashtag' %}">Hashtag</a></li>
 						<li><a class="external" href="{% url 'landing:newses' %}">News</a></li>
-						<li><a class="external" href="{% url 'dashboard:index' %}">Dashboard</a></li>
+						{% if request.user.is_authenticated %}
+							<li><a class="external" href="{% url 'dashboard:index' %}">Dashboard</a></li>
+						{% else %}
+							<li><a class="external" href="{% url 'invitationsystem:index' %}">Get Invitation</a></li>
+						{% endif %}
 					</ul>
 					{% if request.user.is_authenticated %}
 						<ul class="nav navbar-nav navbar-right text-uppercase">
