--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -150,6 +150,36 @@
 		<script src="{% static "dist/js/jquery.singlePageNav.min.js" %}"></script>
     	<script src="{% static "dist/js/bootstrap-notify.js" %}"></script>
 		<script src="{% static "dist/js/custom.js" %}"></script>
+		<script type="text/javascript">
+			function getCookie(name) {
+				var cookieValue = null;
+				if (document.cookie && document.cookie !== '') {
+					var cookies = document.cookie.split(';');
+					for (var i = 0; i < cookies.length; i++) {
+						var cookie = jQuery.trim(cookies[i]);
+						// Does this cookie string begin with the name we want?
+						if (cookie.substring(0, name.length + 1) === (name + '=')) {
+							cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+							break;
+						}
+					}
+				}
+				return cookieValue;
+			}
+			var csrftoken = getCookie('csrftoken');
+			function csrfSafeMethod(method) {
+				// these HTTP methods do not require CSRF protection
+				return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+			}
+			$.ajaxSetup({
+				beforeSend: function(xhr, settings) {
+					if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+						xhr.setRequestHeader("X-CSRFToken", csrftoken);
+					}
+				}
+			});
+			jQuery.ajaxSettings.traditional = true
+		</script>
 		{% block extrascripts %}
 
 		{% endblock %}
