--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n %}
+{% load staticfiles i18n raven %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -145,6 +145,8 @@
 		<!-- end footer -->
 
 		<script src="{% static "dist/js/jquery.js" %}"></script>
+		<script src="https://cdn.ravenjs.com/3.7.0/raven.min.js"></script>
+		<script>Raven.config('{% sentry_public_dsn %}').install()</script>
 		<script src="{% static "dist/js/bootstrap.min.js" %}"></script>
 		<script src="{% static "dist/js/wow.min.js" %}"></script>
 		<script src="{% static "dist/js/jquery.singlePageNav.min.js" %}"></script>
