--- a/templates/groupsystem/subscribed_group_results.html
+++ b/templates/groupsystem/subscribed_group_results.html
@@ -1,4 +1,4 @@
-{% for group in joined_groups %}
+{% for group in user_groups %}
 <a href="{% url 'g:groupdetails' group.id %}">
     <div class="col-md-4" style="margin-top:10px">
         <div class="box box-widget widget-user">
