--- a/templates/groupsystem/members.html
+++ b/templates/groupsystem/members.html
@@ -10,10 +10,6 @@
         }
     </style>
 {% endblock %}
-{% block extra_menus %}
-    {% include "sidebar_group.html" %}
-    {% include "sidebar_group_admin.html" %}
-{% endblock extra_menus %}
 {% block content_header %}
     <h1>
         {% trans "Members" %} - {% trans "admin" %}<br>
@@ -75,6 +71,7 @@
                                             {% endif %}
                                             {% if 'can_change_member_role' in group_perms %}
                                             <select class="changerole" data-username="{{ member.username }}">
+                                                <option value="superadmin">{% trans "SuperAdmin" %}</option>
                                                 <option value="admin">{% trans "Admin" %}</option>
                                                 <option value="moderator">{% trans "Moderator" %}</option>
                                                 <option value="member">{% trans "Member" %}</option>
@@ -115,75 +112,6 @@
 {% endblock content %}
 {% block extrascripts %}
     <script>
-        $("#navleft").show();
-        $("#navright").show();
-        var navbar = 0;
-        var maxnavbar = 2;
-        var navbarcontent_classes = ['.mainnavcontent', '.groupnavcontent', '.groupadminnavcontent'];
-        var navbar_names = ["{% trans "MAIN NAVIGATION" %}", "{{ group.name|upper }} NAVIGATION", "{{ group.name|upper }} ADMIN"]
-        $.each(navbarcontent_classes ,function(index) {
-            if (index !== 0) {
-                $(navbarcontent_classes[index]).hide();
-            }
-        });
-        $("#navright").click(function(event) {
-            navRight();
-        });
-        $("#navleft").click(function(event) {
-            navLeft();
-        });
-        $(".header").on('swipeleft', function(event) {
-            navLeft();
-        });
-        $(".header").on('swiperight', function(event) {
-            navRight();
-        });
-        function navRight() {
-            var divclass = navbarcontent_classes[navbar];
-            $(divclass).hide();
-            if (navbar === maxnavbar) {
-                var right_divclass = navbarcontent_classes[0];
-            }
-            else {
-                var right_divclass = navbarcontent_classes[navbar + 1];
-            }
-            if (navbar === maxnavbar) {
-                $("#navheader").text(navbar_names[0]);
-            }
-            else {
-                $("#navheader").text(navbar_names[navbar + 1]);
-            }
-            $(right_divclass).show('slow');
-            if (navbar === maxnavbar) {
-                navbar = 0;
-            }
-            else {
-                navbar = navbar + 1;
-            }
-        }
-        function navLeft() {
-            var divclass = navbarcontent_classes[navbar];
-            $(divclass).hide();
-            if (navbar === 0) {
-                var left_divclass = navbarcontent_classes[maxnavbar];
-            }
-            else {
-                var left_divclass = navbarcontent_classes[navbar - 1];
-            }
-            if (navbar === 0) {
-                $("#navheader").text(navbar_names[maxnavbar]);
-            }
-            else {
-                $("#navheader").text(navbar_names[navbar - 1]);
-            }
-            $(left_divclass).show('slow');
-            if (navbar === 0) {
-                navbar = maxnavbar;
-            }
-            else {
-                navbar = navbar - 1;
-            }
-        }
         function removeMember(username) {
             $.ajax({
                 url: '{% url 'g:members' group.id %}',
