--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
                         <li class="dropdown messages-menu" id="navmessages">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-comment-o"></i>
-                                <span class="label" id="chatindicator"><i class="fa fa-circle text-danger"></i></span>
+                                <span class="label bg-green" id="chatindicator"></span>
                             </a>
                         </li>
                          <!--Notifications: style can be found in dropdown.less-->
@@ -787,7 +787,10 @@
         $.ajax({
             url: '{% url 'messaging:index' %}?navbar',
             success: function(data){
-                if (data.has_unread) $("#chatindicator").show();
+                if (data.has_unread) {
+                    $("#chatindicator").text(data.has_unread);
+                    $("#chatindicator").show();
+                }
                 $("#navmessages").append(data.html);
                 $(".menu").slimscroll({
                     height: '200px',
@@ -857,7 +860,7 @@
                     $.ajax({
                         url: '{% url 'messaging:index' %}?navbar',
                         success: function(data){
-                            $("#navmessages").append(data);
+                            $("#navmessages").append(data.html);
                             $(".menu").slimscroll({
                                 height: '200px',
                                 size: '3px',
@@ -866,7 +869,10 @@
                             $("li[data-name='" + chatroom + "']").addClass("blink");
                             var messageaudio = document.getElementById('messagingaudio');
                             messageaudio.play();
-                            $("#chatindicator").show();
+                            if (data.has_unread) {
+                                $("#chatindicator").text(data.has_unread);
+                                $("#chatindicator").show();
+                            }
                         }
                     });
                 }
